# HMI_Car

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp  resouce.qrc
common/types/: vehicletypes.h
service/: vehicleservices.cpp  vehicleservices.h
source/controller/: hmicontroller.cpp  hmicontroller.h
source/model/: appmodel.cpp  appmodel.h
source/view/: radialbar.cpp  radialbar.h  segmentbar.cpp  segmentbar.h
